<resources>
    <string name="app_name">MusikAsiq</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="list_song">List Song</string>
    <string name="relaxation">Relaxation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="felix_son">Felix Son</string>
    <string name="body_small">Body Small</string>
    <string name="hey">Hey, </string>
    <string name="name_with_hai">%1$s 👋</string>
    <string name="let_s_find_a_good_song_here">Let\'s find a good song here</string>
    <string name="search">Search</string>
    <string name="most_popular">Most popular</string>
    <string name="_2022_the_shades">2022 - The shades</string>
    <string name="get_started">Get Started</string>
    <string name="my_journey_today_is_full_of_splashes_of_sky_water">My journey today is full of splashes of sky water</string>
    <string name="search_result_for">Search Result for </string>
    <string name="we_re_glad">we\'re glad</string>
    <string name="you_re_here">you\'re here</string>
    <string name="username">Username</string>
    <string name="input_your_username">Input your username</string>
    <string name="password">Password</string>
    <string name="input_your_password">Input your password</string>
    <string name="login">Login</string>
    <string name="sudah_punya_akun">Sudah punya akun? </string>
    <string name="daftar_sekarang"> Daftar sekarang</string>
    <string name="name">Name</string>
    <string name="input_your_name">Input your name</string>
    <string name="register">Register</string>
    <string name="login_sekarang">Login sekarang</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="title_activity_video_player">VideoPlayerActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="video_player">Video Player</string>
    <string name="icon_back">Icon Back</string>
    <string name="song_title">Photograph</string>
    <string name="tv_time">0:00</string>
    <string name="play_button">play_button_description</string>
    <string name="deskripsi_video">Deskripsi Video</string>
    <string name="profile_page">Profile Page</string>
    <string name="your_personal_data_is_on_this_page">Your personal data is on this page</string>
    <string name="status_login">Joined 1 year ago</string>
    <string name="logout">Logout</string>
    <string name="empty_exception_message">Terjadi kesalahan \n gagal memuat items</string>
</resources>