<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F5F5F5"
    tools:context=".ui.mediaplayer.MediaPlayerActivity">

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="30dp"
        android:background="@drawable/circle_button"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="30dp"
        tools:ignore="RtlHardcoded">

        <ImageButton
            android:id="@+id/btn_loop_song"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/circle_button"
            android:backgroundTint="#5D59FF"
            android:src="@drawable/ic_loop"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_loop_song_with_certain_count"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/circle_button"
            android:src="@drawable/ic_countable_loop"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_favorite"
            android:layout_width="51dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:backgroundTint="#F5F5F5"
            android:src="@drawable/ic_favorite_active"
            tools:ignore="SpeakableTextPresentCheck" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="150dp"
        app:cardCornerRadius="8dp">

        <ImageView
            android:id="@+id/iv_song"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/song_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/fontbold"
        android:maxLength="20"
        android:text="@string/song_title"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center"
        android:layout_marginTop="400dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/current_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fontbold"
            android:gravity="center"
            android:text="@string/tv_time"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <SeekBar
            android:id="@+id/seek_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="7"
            android:progress="50"
            android:progressBackgroundTint="#CDCDCD"
            android:progressTint="#7673FF"
            android:thumb="@drawable/ic_thumbs" />

        <TextView
            android:id="@+id/total_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/fontbold"
            android:gravity="center"
            android:text="@string/tv_time"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </LinearLayout>

    <!--bottom nav-->
    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_nav"
        android:layout_width="match_parent"
        android:layout_height="73dp"
        android:layout_gravity="bottom"
        android:backgroundTint="#5D59FF"
        app:fabAlignmentMode="center"
        app:fabAnimationMode="scale"
        app:fabCradleMargin="15dp"
        app:fabCradleRoundedCornerRadius="32dp">

        <ImageButton
            android:id="@+id/btn_backward"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="70dp"
            android:backgroundTint="#5D59FF"
            android:src="@drawable/ic_fast_rewind"
            tools:ignore="SpeakableTextPresentCheck" />

        <ImageButton
            android:id="@+id/btn_forward"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="160dp"
            android:backgroundTint="#5D59FF"
            android:src="@drawable/ic_fast_forward"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.bottomappbar.BottomAppBar>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:contentDescription="@string/play_button"
        android:src="@drawable/ic_play"
        app:backgroundTint="#5D59FF"
        app:fabCustomSize="80dp"
        app:layout_anchor="@id/bottom_nav"
        app:maxImageSize="40dp"
        app:tint="@color/white" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>